// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuButtonItem /> when it is a header type matches its snapshot 1`] = `
<Block
  className="y-menu-button--item y-menu-button--item-header"
  textColor="primary"
  textSize="small"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      className="y-menu-button--item-text"
    >
      test
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MenuButtonItem /> when it is disabled with an icon matches its snapshot 1`] = `
<Block
  className="y-menu-button--item"
  textColor="disabled"
  textSize="mediumSub"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      className="y-menu-button--item-icon y-menu-button--item-icon__disabled"
      fixed={true}
    >
      <Reply
        block={true}
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn
      className="y-menu-button--item-text"
    >
      test
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MenuButtonItem /> when it is disabled with an illustration matches its snapshot 1`] = `
<Block
  className="y-menu-button--item"
  textColor="disabled"
  textSize="mediumSub"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      className="y-menu-button--item-icon"
      fixed={true}
    >
      <Docx
        block={true}
      />
    </FixedGridColumn>
    <FixedGridColumn
      className="y-menu-button--item-text"
    >
      test
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MenuButtonItem /> when it is disabled without an icon matches its snapshot 1`] = `
<Block
  className="y-menu-button--item"
  textColor="disabled"
  textSize="mediumSub"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      className="y-menu-button--item-text"
    >
      test
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MenuButtonItem /> with an href matches its snapshot 1`] = `
<Block
  className="y-menu-button--item"
  textColor="secondary"
  textSize="mediumSub"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      className="y-menu-button--item-text"
    >
      test
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MenuButtonItem /> with an icon passed matches its snapshot 1`] = `
<Block
  className="y-menu-button--item"
  textColor="secondary"
  textSize="mediumSub"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      className="y-menu-button--item-icon"
      fixed={true}
    >
      <Reply
        block={true}
        size="16"
      />
    </FixedGridColumn>
    <FixedGridColumn
      className="y-menu-button--item-text"
    >
      test
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MenuButtonItem /> with default options matches its snapshot 1`] = `
<Block
  className="y-menu-button--item"
  textColor="secondary"
  textSize="mediumSub"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn
      className="y-menu-button--item-text"
    >
      test
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;
